[gd_scene load_steps=2 format=3 uid="uid://bwj7hdxoebcf3"]

[ext_resource type="Script" path="res://Tests/debug_validation_test.gd" id="1_0bc5r"]

[node name="DebugValidationTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0bc5r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Statistics Debug Validation Test"
horizontal_alignment = 1

[node name="RunButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Run Validation Tests"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Click 'Run Validation Tests' to verify the Statistics system fixes..."